--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ repository = "https://github.com/hellbound22/shellpage"
 authors = ["Rodrigo Mauricio <rodrigomauricio@protonmail.com>"]
 version = "0.1.0"
 edition = "2021"
-licence = "MIT"
+license = "MIT"
 keywords = ["blog", "markdown", "html"]
 categories = ["web-programming"]
 exclude = ["config.toml"]
