--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,9 @@ exclude = ["config.toml"]
 
 [dependencies]
 markdown = "1.0.0-alpha.21"
-clap = { version = "4.5.20", features = ["derive"] }
+clap = { version = "4.5.20", features = ["cargo", "derive"] }
 toml = "0.8.19"
 serde = { version = "1.0", features = ["derive"] }
 tera = "1.20.0"
-chrono = "0.4.38"
+chrono = { version = "0.4.38", features = ["clock"] }
 thiserror = "1.0.64"
